--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ts-toy-tree",
   "version": "1.0.0",
-  "description": "This is practice according to WEB+DB PRESS Vol.117 ç‰¹?¿½?1ã€Œå®Ÿæˆ¦æŠ•ï¿½??¿½TypeScript?¿½?",
+  "description": "This is practice according to WEB+DB PRESS Vol.117 ç‰¹???¿½?¿½??¿½?¿½?1ã€Œå®Ÿæˆ¦æŠ•ï¿½????¿½?¿½??¿½?¿½TypeScript???¿½?¿½??¿½?¿½?",
   "main": "index.js",
   "bin": {
-    "toy-tree": "src/bin.js"
+    "toy-tree": "dist/bin.js"
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -25,9 +26,15 @@
     "meow": "^8.0.0"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   },
   "jest": {
+    "preset": "ts-test",
+    "modulePathIgnorePatterns": ["<rootdir>/dist"],
     "setupFiles": ["./jest.setup.js"]
   }
 }
