--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ts-toy-tree",
   "version": "1.0.0",
-  "description": "This is practice according to WEB+DB PRESS Vol.117 ç‰¹???¿½?¿½??¿½?¿½?1ã€Œå®Ÿæˆ¦æŠ•ï¿½????¿½?¿½??¿½?¿½TypeScript???¿½?¿½??¿½?¿½?",
+  "description": "This is practice according to WEB+DB PRESS Vol.117 ç‰¹??????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½?????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½?1ã€Œå®Ÿæˆ¦æŠ•ï¿½???????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½?????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½TypeScript??????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½?????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½????¿½?¿½??¿½?¿½???¿½?¿½??¿½?¿½?",
   "main": "index.js",
   "bin": {
     "toy-tree": "dist/bin.js"
   },
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"**/*.ts\"",
+    "format": "prettier --write \"**/*.{js,ts,json,md}\""
   },
   "repository": {
     "type": "git",
@@ -28,13 +30,34 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
     "jest": "^26.6.3",
+    "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.5"
   },
   "jest": {
     "preset": "ts-test",
-    "modulePathIgnorePatterns": ["<rootdir>/dist"],
-    "setupFiles": ["./jest.setup.js"]
+    "modulePathIgnorePatterns": [
+      "<rootdir>/dist"
+    ],
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
+  },
+  "eslintconfig": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "prettier",
+      "prettier/@typescript-eslint"
+    ]
   }
 }
